ocp311/working/f5-cluster-deployment.yaml
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: f5-server
    namespace: kube-system
  spec:
    replicas: 1
    template:
      metadata:
        name: k8s-bigip-ctlr
        labels:
          app: k8s-bigip-ctlr
      spec:
        # Name of the Service Account bound to a Cluster Role with the required
        # permissions
        serviceAccountName: bigip-ctlr
        containers:
          - name: k8s-bigip-ctlr
            image: f5networks/k8s-bigip-ctlr:latest
            command: ["/app/bin/k8s-bigip-ctlr"]
            args: [
              "--bigip-username=$(BIGIP_USERNAME)",
              "--bigip-password=$(BIGIP_PASSWORD)",
              # Replace with the IP address or hostname of your BIG-IP device
              "--bigip-url=https://10.0.15.95:8443",
              # Replace with the name of the BIG-IP partition you want to manage
              "--bigip-partition=ocp",
              # Replace with service type - cluster or nodeport
              "--pool-member-type=cluster",
              # Replace with the path to the BIG-IP VXLAN connected to the
              # OpenShift HostSubnet
              "--openshift-sdn-name=/Common/openshift-vxlan",
              # set manage-routes TRUE to manage routes
              "--manage-routes=true",
              # set manage-configmaps TRUE to manage config maps
              "--manage-configmaps=true",
              # set the namespace for CIS to watch.
              "--namespace=default",
              "--route-vserver-addr=10.0.15.95",
              # Logging level
              "--log-level=DEBUG",
              "--log-as3-response=true",
              # AS3 override functionality, Refer docs for more info
              "--override-as3-declaration=f5demo/f5-route-vs-override",
              # Self-signed cert
              "--insecure=true"
              ]
        imagePullSecrets:
          - name: f5-docker-images
          - name: bigip-login
