ocp311/working/f5-hello-world-route.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      f5type: hello-world
      name: f5-hello-world
    name: f5-hello-world
    namespace: default
    annotations:
      virtual-server.f5.com/balance: round-robin
  spec:
    host: app1.thebizdevops.net
    path: "/"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: f5-hello-world
